# wk2img

./: AUTHORS  ChangeLog  README  autogen.sh  configure.ac  photo.c  photowk.c  test-delay.html
debian/: changelog  control  copyright  rules
src/: Makefile.am  main.c  photowk.c
